--- a/lzzz.ink/index.html
+++ b/lzzz.ink/index.html
@@ -9,6 +9,15 @@
 
 <body>
     <h1>Hello, World!</h1>
+    <p>Version: <span id="version"></span></p>
 </body>
+
+<script>
+    fetch('/api/version')
+        .then(response => response.json())
+        .then(data => {
+            document.getElementById('version').textContent = data.version
+        })
+</script>
 
 </html>
