feat: Add explicit dark mode declarations and DarkReader lock.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,16 +1,19 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="color-scheme: dark;">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/webp" href="/favicon.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="color-scheme" content="dark">
+  <meta name="darkreader-lock">
   <title>Xarth-Mai</title>
   <link rel="preload" as="image" href="/bg.webp" />
   <style>
     /* Critical CSS for First Paint */
     :root {
       --color-bg-base: #050505;
+      color-scheme: dark;
     }
 
     body {
